# SyntaxSocialApp

./: .ninja_deps  .ninja_log  CMakeLists.txt  README.md
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/qml_imports/: SocialAppNew_conf.cmake  SocialAppNew_conf.rsp
.qt/rcc/: json_data.qrc  post_images.qrc  qml_files.qrc  qrc_json_data.cpp  qrc_qml_files.cpp  qrc_tab_icons.cpp  tab_icons.qrc
assets/data/: AllFriends.json  AllPages.json  AllPosts.json  id.txt  liked_pages.json  pass.txt
core/: ActivityPost.cpp  ActivityPost.h  Comment.cpp  Comment.h  Date.cpp  Date.h  Memory.cpp  Memory.h  Page.cpp  Page.h  PageLoader.cpp  PageLoader.h  Post.cpp  Post.h  Syntax.cpp  Syntax.h  User.cpp  User.h  main.cpp  savecode.qml
qml/: main.qml
qml/ExpandableBottomBar/: NavigationBar.qml  NavigationBarButton.qml
qml/screens/: AuthScreen.qml  Discover.qml  EmptyState.qml  Friends.qml  Header.qml  HomeScreen.qml  LikeAnimation.qml  PageView.qml  PostDelegate.qml  Profile.qml  PullToRefresh.qml  SignupScreen.qml  StoriesRow.qml
